--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Open Geodata
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -23,6 +23,8 @@ twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
 search: true
+timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+locale: pt-BR
 
 # Build settings
 markdown: kramdown
@@ -31,7 +33,6 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -58,7 +59,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Open Geodata"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
@@ -99,6 +100,10 @@ defaults:
       comments: true
       share: true
       related: true
+      # https://mmistakes.github.io/minimal-mistakes/layout-table-of-contents-sticky/#top
+      # https://mmistakes.github.io/minimal-mistakes/docs/helpers/#table-of-contents
+      toc: true
+      toc_sticky: true      
   # _pages
   - scope:
       path: "_pages"
@@ -106,6 +111,10 @@ defaults:
     values:
       layout: single
       author_profile: true
+      # https://mmistakes.github.io/minimal-mistakes/layout-table-of-contents-sticky/#top
+      # https://mmistakes.github.io/minimal-mistakes/docs/helpers/#table-of-contents
+      toc: true
+      toc_sticky: true      
 
 category_archive:
   type: liquid
