--- a/_config.yml
+++ b/_config.yml
@@ -14,23 +14,23 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Open Geodata
-email: 
+email: michelmetran@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+#twitter_username: open-geodata
+github_username: open-geodata
+minimal_mistakes_skin: air
 search: true
 timezone: "America/Sao_Paulo" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 locale: pt-BR
 logo: "/assets/images/logo.png"
-#url: "https://michelmetran.com.br"
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
@@ -61,11 +61,12 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Michel Metran"
-  avatar : "/assets/images/avatar.png"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name: "Michel Metran"
+  avatar: "/assets/images/avatar.png"
+  bio: "Following the White Rabbit"
+  location: "Piracicaba, SP"
   links:
-    - label: "Website"
+    - label: "Site"
       icon: "fas fa-fw fa-link"
       url: "https://michelmetran.github.io"
     - label: "Twitter"
@@ -77,23 +78,30 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/michelmetran"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
+      url: "https://facebook.com/michelmetran"
+    - label: "StackOverflow"
+      icon: "fab fa-fw fa-stack-overflow"
+      url: "https://stackoverflow.com/users/6003328/michel-metran"
 
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/michelmetran"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/michelmetran"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/michelmetran"
+
 
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
@@ -102,10 +110,9 @@ defaults:
       comments: true
       share: true
       related: true
-      # https://mmistakes.github.io/minimal-mistakes/layout-table-of-contents-sticky/#top
-      # https://mmistakes.github.io/minimal-mistakes/docs/helpers/#table-of-contents
       toc: true
-      toc_sticky: true      
+      toc_sticky: true
+
   # _pages
   - scope:
       path: "_pages"
@@ -113,10 +120,13 @@ defaults:
     values:
       layout: single
       author_profile: true
-      # https://mmistakes.github.io/minimal-mistakes/layout-table-of-contents-sticky/#top
-      # https://mmistakes.github.io/minimal-mistakes/docs/helpers/#table-of-contents
-      toc: true
-      toc_sticky: true      
+      read_time: true
+      comments: true
+      share: true
+#     related: true
+#     toc: true
+#     toc_sticky: true
+ 
 
 category_archive:
   type: liquid
