--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ plugins:
 author:
   name: "Michel Metran"
   avatar: "/assets/images/avatar.png"
-  bio: "Following the White Rabbit"
+  bio: "um passo a frente e você já não está no mesmo lugar..."
   location: "Piracicaba, SP"
   links:
     - label: "Site"
@@ -133,4 +133,4 @@ category_archive:
   path: /categories/
 tag_archive:
   type: liquid
-  path: /tags/
+  path: /tags/  
