--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 Michel Metran:
   name: "Michel Metran"
   avatar: "/assets/images/avatar.png"
-  bio: "Following the White Rabbit"
+  bio: "um passo a frente e você já não está no mesmo lugar"
   location: "Piracicaba, SP"
   links:
     - label: "Email"
