--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
       url: "https://twitter.com/michelmetran"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/michelmetran"
+      url: "https://github.com/open-geodata"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/michelmetran"
@@ -92,7 +92,7 @@ footer:
       url: "https://twitter.com/michelmetran"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/michelmetran"
+      url: "https://github.com/open-geodata"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/michelmetran"
